# Summer_workshop_TEAM2

./: README.md
Summer_workshop_TEAM2_FRONTEND/src/: App.css  App.tsx
Summer_workshop_TEAM2_FRONTEND/src/api/: api.ts
Summer_workshop_TEAM2_FRONTEND/src/component/: ProductCard.css  ProductCard.tsx  ResultForm.css  ResultForm.tsx  UserForm.module.css  UserForm.tsx
Summer_workshop_TEAM2_FRONTEND/src/type/: type.ts
Summer_workshop_TEAM_2_BACKEND/: README.md  pyproject.toml  requirements.txt  test_gemini.py
Summer_workshop_TEAM_2_BACKEND/app/: main.py
Summer_workshop_TEAM_2_BACKEND/app/core/: __init__.py  config.py
Summer_workshop_TEAM_2_BACKEND/app/models/: __init__.py  dto.py
Summer_workshop_TEAM_2_BACKEND/app/routers/: __init__.py  routes.py
Summer_workshop_TEAM_2_BACKEND/app/services/: __init__.py  gemini_service.py  gemini_service_test.py
Summer_workshop_TEAM_2_BACKEND/static/: index-DWdlB_Nf.js  index-Dg3goxUT.css
Summer_workshop_TEAM_2_BACKEND/summer_workshop_team_2_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Summer_workshop_TEAM_2_BACKEND/templates/: index.html
Summer_workshop_TEAM_2_BACKEND/tests/: conftest.py  test_app.py
