[project]
name = "summer-workshop-team-2-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "google>=3.0.0",
]
